# Air-Mouse

./: CMakeLists.txt  Makefile  README.md  kconfig.projbuild  main.cpp  sdkconfig  sdkconfig.old
MPU6050_Read_Values/: CMakeLists.txt  CmakeLists.txt  README.md  sdkconfig
MPU6050_Read_Values/main/: CMakeLists.txt  i2c.cpp  kalmanfilter.cpp  main.cpp  mpu6050.cpp
MPU6050_Read_Values/main/include/: i2c.hpp  kalmanfilter.hpp  mpu6050.hpp
components/: CMakeLists.txt  kconfig.projbuild
main/: CMakeLists.txt  config.h  hal_ble.c  kconfig.projbuild  main.c  main.cpp
main/MPU6050/: MPU6050_6Axis_MotionApps20.h
main/ble_hid/: hal_ble.c
